<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/allProductsFragment"
        android:icon="@drawable/ic_home_48"
        android:title="@string/home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_categories_48"
        android:title="@string/categories" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_shopping_bag_48"
        android:title="@string/cart" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_48"
        android:title="@string/profile" />

</menu>