<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/itemMargin"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="@dimen/itemCardRadius"
    app:cardElevation="@dimen/itemCardElevation"
    app:strokeColor="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="350dp">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:contentDescription="@string/product_s_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image_test_jacket"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_products_to_favorite"
            android:src="@drawable/ic_favorite_border_black_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/didactgothicregular"
            android:text="@string/mens_cotton_jacket"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintBottom_toTopOf="@id/addToCartButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="titleTextView" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_shopping_cart"
            android:fontFamily="@font/didactgothicregular"
            android:text="@string/price_value"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_in_item"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
